# escape-from-itunes

./: .gitignore  LICENSE  README.md  escape-from-itunes.cabal  stack.yaml
app/: Main.hs
src/: Actions.hs  Args.hs  Attributes.hs  Channel.hs  Itunes.hs
test/: ArgsSpec.hs  ItunesSpec.hs
