name:                escape-from-itunes
version:             0.1.0.0
synopsis:            Copy iTunes Music Library to sane file hierarchy
description:         Copy iTunes Music Library to sane file hierarchy
homepage:            https://github.com/shterrett/escape-from-itunes#readme
license:             MIT
license-file:        LICENSE
author:              Stuart Terrett
maintainer:          shterrett@gmail.com
copyright:           Copyright 2018 Stuart Terrett
category:            terminal
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Itunes
                     , Args
                     , Attributes
  build-depends:       base >= 4.7 && < 5
                     , idiii == 0.1.3.3
                     , optparse-applicative == 0.14.3.0
                     , regex-compat == 0.95.1
  default-language:    Haskell2010

executable escape-from-itunes
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , escape-from-itunes
                     , optparse-applicative == 0.14.3.0
  default-language:    Haskell2010

test-suite escape-from-itunes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ArgsSpec
  build-depends:       base
                     , escape-from-itunes
                     , hspec
                     , QuickCheck
                     , optparse-applicative == 0.14.3.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shterrett/escape-from-itunes
